apps/base/pcm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pcm
  namespace: pcm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: PCM
    gethomepage.dev/description: PCM
    gethomepage.dev/group: Development
    gethomepage.dev/icon: pcm.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pcm.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: pcm.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pcm
                port:
                  number: 80
